# flash-attention

./: CMakeLists.txt  README.md  setup.py
cmake/: Dependencies.cmake  FindCUDA.cmake  FindDragon.cmake  FindMLU.cmake  MiscCheck.cmake  SelectCudaArch.cmake
csrc/kernels/: CMakeLists.txt
csrc/kernels/flash_attn/: CMakeLists.txt  op_kernels.h
csrc/kernels/flash_attn/cuda/: flash.cu  flash.h  flash_bwd_launch_template.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_bf16_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_bf16_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_bf16_sm80.cu  flash_fwd_split_hdim192_fp16_sm80.cu  flash_fwd_split_hdim224_bf16_sm80.cu  flash_fwd_split_hdim224_fp16_sm80.cu  flash_fwd_split_hdim256_bf16_sm80.cu  flash_fwd_split_hdim256_fp16_sm80.cu  flash_fwd_split_hdim32_bf16_sm80.cu  flash_fwd_split_hdim32_fp16_sm80.cu  flash_fwd_split_hdim64_bf16_sm80.cu  flash_fwd_split_hdim64_fp16_sm80.cu  flash_fwd_split_hdim96_bf16_sm80.cu  flash_fwd_split_hdim96_fp16_sm80.cu  generate_kernels.py
csrc/kernels/kv_cache/: CMakeLists.txt  op_kernels.h
csrc/kernels/kv_cache/cuda/: kv_cache_kernel.cu
csrc/kernels/kv_cache/mlu/: kv_cache_kernel.mlu
csrc/kernels/rms_norm/: op_kernels.h
csrc/kernels/rms_norm/cuda/: rms_norm_kernel.cu
csrc/kernels/rotary/: op_kernels.h
csrc/kernels/rotary/cuda/: rotary_kernel.cu
csrc/kernels/rotary/mlu/: rotary_kernel.mlu
csrc/kernels/swiglu/: op_kernels.h
csrc/kernels/swiglu/cuda/: swiglu_kernel.cu
csrc/kernels/swiglu/mlu/: swiglu_kernel.mlu
csrc/modules/extension/: CMakeLists.txt
csrc/operators/: flash_attn_op.cc  flash_attn_op.h  flash_attn_op_cnnl.cc  flash_attn_op_cuda.cc  flash_attn_op_impl_cnnl.h  flash_attn_op_impl_cuda.h  fused_dense_op.h  fused_dense_op_cuda.cc  kv_cache_op.cc  kv_cache_op.h  rms_norm_op.cc  rms_norm_op.h  rotary_op.cc  rotary_op.h  swiglu_op.cc  swiglu_op.h
csrc/utils/aten/: common_cuda.h
flash_attn/: __init__.py  flash_attn_interface.py
flash_attn/layers/: cache.py  rotary.py
flash_attn/modules/: embedding.py
flash_attn/ops/: activations.py  fused_dense.py  rms_norm.py
